@@ -158,6 +158,28 @@ void test(void)
            "\n------ double free in mmap-backed pool ------\n\n");
    VALGRIND_MEMPOOL_FREE(p2, x2);
 
+   {
+      // test that redzone are still protected even if the user forgets
+      // to mark the superblock noaccess.
+      char superblock[100];
+
+      VALGRIND_CREATE_MEMPOOL(superblock, REDZONE_SIZE, 0);
+      // User should mark the superblock no access to benefit
+      // from full Valgrind memcheck protection.
+      // VALGRIND_MEMPOOL_ALLOC will however still ensure the
+      // redzones are protected.
+      VALGRIND_MEMPOOL_ALLOC(superblock, superblock+30, 10);
+
+      res += superblock[30]; // valid
+      res += superblock[39]; // valid
+
+      fprintf(stderr,
+              "\n------ 2 invalid access in 'no no-access superblock' ---\n\n");
+      res += superblock[29]; // invalid
+      res += superblock[40]; // invalid
+
+      VALGRIND_DESTROY_MEMPOOL(superblock);
+   }
    // claim res is used, so gcc can't nuke this all
    __asm__ __volatile__("" : : "r"(res));
 
